[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Sprites/peasant_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://src/Scenes/BloodDown.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scripts/Peasants.gd" type="Script" id=3]
[ext_resource path="res://src/Sprites/blood_peasant2.png" type="Texture" id=4]
[ext_resource path="res://src/Sprites/peasant4_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://src/Sprites/peasant2_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://src/Sprites/peasant3_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://src/Sprites/blood_peasant.png" type="Texture" id=8]
[ext_resource path="res://src/Sprites/blood_peasant3.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 22.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Character:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Character:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1.41421, 0.757858 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1.27456, 0.63728 ),
"update": 0,
"values": [ Vector2( 1, 2 ), Vector2( 1, 14 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "panic"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="Peasants" type="Area2D"]
position = Vector2( -1, 0 )
collision_layer = 18
collision_mask = 18
monitoring = false
script = ExtResource( 3 )
minSpeed = 50.0
maxSpeed = 65.0
skins = [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ]
decals = [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 9 ) ]
character = NodePath("Character")
skin = NodePath("Character/Sprite")
decal = NodePath("Character/Sprite/BloodDecal")
bloodFX = NodePath("Character/BloodDown")
minBlood = 15
maxBlood = 20

[node name="Character" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Character"]
position = Vector2( -1, -2 )
texture = ExtResource( 1 )
hframes = 2

[node name="BloodDecal" type="Sprite" parent="Character/Sprite"]
position = Vector2( 0, -4.5 )
texture = ExtResource( 8 )

[node name="BloodDown" parent="Character" instance=ExtResource( 2 )]
position = Vector2( 0, -9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/death = SubResource( 3 )
anims/default = SubResource( 4 )
anims/panic = SubResource( 5 )

[node name="PoolTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PoolTimer" to="." method="_on_PoolTimer_timeout"]
